adaptation mobile fixin  the project

--- a/styles/style.css
+++ b/styles/style.css
@@ -817,11 +817,12 @@ li {
   }
   .review_left_box {
     grid-template-columns: repeat(1, 1fr);
-    padding-left: 8vw;
+    padding: 2vw;
   }
   .result_gurl {
     flex-direction: column;
-    width: 99vw;
+    width: 100vw;
+    padding: 2vw;
   }
   .box_reviews_inner {
     width: 170%;
@@ -829,7 +830,7 @@ li {
   .result_images {
     width: 50vw;
     height: 125vw;
-    padding-left: 20vw;
+    padding: 0vw 20vw 0vw 18vw;
   }
   .reviews_phone {
     width: 66vw;
